@@ -3,8 +3,9 @@ This file shows the changes in recent releases of MODx. The most current release
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
 
-MODx 0.9.5 RC1 (rev 1889 - Nov 2, 2006)
+MODx 0.9.5 RC1 (rev 1890 - Nov 2, 2006)
 ====================================
+* Fix eForm parsing error with spaces and multiple sessionVars and broken Thank You page (1890)
 * Update Wayfinder to record references better: e.g., 6 to [~6~] (1885)
 * Fix incorrect 1px top border on MODx Host menu (1797/1887)
 * Update to Jot 1.0 release (1884)
